# NGN

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260520100500_init.sql
src/: main.rs
src/app/: config.rs  db.rs  errors.rs  mod.rs  openapi.rs  router.rs  security.rs  state.rs
src/app/features/: auth.rs  claims.rs  lookup.rs  mod.rs
